<?xml version="1.0"?>
<package format="2">
  <name>donkeycar</name>
  <version>0.0.1</version>
  <description>The donkeycar package</description>

  <maintainer email="candle-lab-cse@iith.ac.in">CANDLE Research Lab</maintainer>
  <license>GPLv3</license>

  <url type="website">https://bitbucket.org/maruthisi/chinkara</url>

  <author email="maruthi.inukonda@gmail.com">Maruthi S. Inukonda</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>

  <exec_depend>jetson_csi_cam</exec_depend>
</package>
